@@ -787,6 +787,7 @@ settings.label.reportFormats                  = Report Formats
 settings.label.rssLink                        = RSS Link
 settings.label.schedulingEnabled              = Scheduling Enabled
 settings.label.showHeaderInPublicUserSession  = Show Header in Public User Session
+settings.label.smtpFrom                       = SMTP From
 settings.label.smtpPassword                   = SMTP Password
 settings.label.smtpPort                       = SMTP Port
 settings.label.smtpServer                     = SMTP Server
