@@ -760,6 +760,7 @@ settings.label.reportFormats                  = Fomati za ripoti
 settings.label.rssLink                        = Kiungo cha RSS
 settings.label.schedulingEnabled              = Kuratibisha kumewezeshwa
 settings.label.showHeaderInPublicUserSession  = Onyesha kichwa katika kipindi cha mtumiaji wa umma
+settings.label.smtpFrom                       = Anwani ya barua pepe
 settings.label.smtpPassword                   = Nywila ya SMTP
 settings.label.smtpPort                       = Mlango wa SMTP
 settings.label.smtpServer                     = Seva ya SMTP
